v3.8.9 (XXXX-XX-XX)
-------------------

* Updated ArangoDB Starter to 0.15.7.

* Updated OpenSSL to 1.1.1t and OpenLDAP to 2.6.4.

* BTS-1193: Fix for schema update. When removing a field and then inserting a
  new field into the schema, previously, both old and new schema would be
  merged, meaning it would maintain the old field and add the new one.

* BTS-266: When starting up a cluster without `--cluster.force-one-shard`,
  creating a database and then restarting the cluster with the startup option
  `--cluster.force-one-shard` set to true, when the formerly created database
  has more than one shard, but the flag is set to true, this could lead to
  arangosearch's analyzers to use optimizations that should not be used if not
  in a single shard mode. For this not to happen, the verification of the
  parameter being true as a condition to run optimizations was removed.

* Updated arangosync to v2.14.0.

* ES-1396: under some rare circumstances it was possible that background index
  creation missed some documents in case the documents were inserted after
  background index creation started and the corresponding WAL files with the
  inserts were already removed before background indexing caught up.

* Fix coordinator segfault in AQL queries in which the query is invoked from
  within a JavaScript context (e.g. from Foxx or from the server's console mode)
  **and** the query has multiple coordinator snippets of which except the
  outermost one invokes a JavaScript function.
  Instead of crashing, coordinators will now respond with the exception "no v8
  context available to enter for current transaction context".
  For AQL queries that called one of the AQL functions `CALL` or `APPLY` with a
  fixed function name, e.g. `APPLY('CONCAT', ...)`, it is now also assumed
  correctly that no JavaScript is needed, except if the fixed function name is
  the name of a user-defined function.
  This fixes an issue described in OASIS-24962.
